# LearnOpenGL

./: CMakeLists.txt  GLHead.cpp  GLHead.h  IndexBuffer.cpp  IndexBuffer.h  README.MD  Render.cpp  Render.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.cpp  VertexBufferLayout.h  main.cpp
res/shaders/: Basic.shader  BatchDynamic.shader
test/: Test.cpp  Test.h  TestBatchDynamicRender.cpp  TestBatchDynamicRender.h  TestBatchRender.cpp  TestBatchRender.h  TestClearColor.cpp  TestClearColor.h  TestTexture2D.cpp  TestTexture2D.h
